WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169291
Text insertion cursor disappears after pressing enter
https://bugs.webkit.org/show_bug.cgi?id=169291
Summary
Text insertion cursor disappears after pressing enter
Tim Horton
Reported
2017-03-07 10:48:55 PST
Steps to Reproduce: 1. WKWebView with _editable=YES. 2. Tap to focus. 3. Type words. 4. Press enter a few times. Expected: Cursor should still appear. Actual: Cursor disappears.
Attachments
Patch
(9.63 KB, patch)
2017-04-06 19:19 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-elcapitan
(917.22 KB, application/zip)
2017-04-06 20:25 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews105 for mac-elcapitan-wk2
(867.29 KB, application/zip)
2017-04-06 20:26 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews124 for ios-simulator-wk2
(11.98 MB, application/zip)
2017-04-06 20:32 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews114 for mac-elcapitan
(1.69 MB, application/zip)
2017-04-06 20:38 PDT
,
Build Bot
no flags
Details
Patch
(10.96 KB, patch)
2017-04-06 20:50 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-03-07 11:08:38 PST
rdar://problem/30899611
alan
Comment 2
2017-04-06 19:19:57 PDT
Created
attachment 306457
[details]
Patch
Build Bot
Comment 3
2017-04-06 20:25:15 PDT
Comment on
attachment 306457
[details]
Patch
Attachment 306457
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/3487751
New failing tests: editing/pasteboard/5761530-1.html
Build Bot
Comment 4
2017-04-06 20:25:16 PDT
Created
attachment 306459
[details]
Archive of layout-test-results from ews100 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 5
2017-04-06 20:26:38 PDT
Comment on
attachment 306457
[details]
Patch
Attachment 306457
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/3487744
New failing tests: editing/pasteboard/5761530-1.html
Build Bot
Comment 6
2017-04-06 20:26:39 PDT
Created
attachment 306460
[details]
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 7
2017-04-06 20:32:25 PDT
Comment on
attachment 306457
[details]
Patch
Attachment 306457
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/3487696
New failing tests: editing/simple-line-layout-caret-is-gone.html
Build Bot
Comment 8
2017-04-06 20:32:27 PDT
Created
attachment 306462
[details]
Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 9
2017-04-06 20:38:15 PDT
Comment on
attachment 306457
[details]
Patch
Attachment 306457
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3487757
New failing tests: editing/pasteboard/5761530-1.html
Build Bot
Comment 10
2017-04-06 20:38:16 PDT
Created
attachment 306463
[details]
Archive of layout-test-results from ews114 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-elcapitan Platform: Mac OS X 10.11.6
alan
Comment 11
2017-04-06 20:50:27 PDT
Created
attachment 306464
[details]
Patch
WebKit Commit Bot
Comment 12
2017-04-07 08:05:46 PDT
Comment on
attachment 306464
[details]
Patch Clearing flags on attachment: 306464 Committed
r215094
: <
http://trac.webkit.org/changeset/215094
>
WebKit Commit Bot
Comment 13
2017-04-07 08:05:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug